Non-PCH x86_32 build failure: err_msg is not defined

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b10
    • x86

      x86_32 non-PCH build still fails:

      /pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp: In static member function 'static nmethod* SharedRuntime::generate_native_wrapper(MacroAssembler*, const methodHandle&, int, BasicType*, VMRegPair*, BasicType)':
      /pool/buildbot/slaves/sobornost/jdkX-hs/build/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp:2205:55: error: 'err_msg' was not declared in this scope
           __ block_comment(err_msg("move %d -> %d", i, c_arg));
                                                             ^
      The easiest fix is this:

      diff -r 5a757c0326c7 src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp
      --- a/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp Thu Mar 29 17:15:26 2018 +0200
      +++ b/src/hotspot/cpu/x86/sharedRuntime_x86_64.cpp Thu Mar 29 18:17:58 2018 +0200
      @@ -41,6 +41,7 @@
       #include "runtime/sharedRuntime.hpp"
       #include "runtime/vframeArray.hpp"
       #include "utilities/align.hpp"
      +#include "utilities/formatBuffer.hpp"
       #include "vm_version_x86.hpp"
       #include "vmreg_x86.inline.hpp"
       #ifdef COMPILER1

      But it is baffling why it does not fail the similar build with x86_64!

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: