8200438: Non-PCH x86_32 build failure: err_msg is not defined

Reviewed-by: stuefe, zgu, stefank